# rescue-dog-aggregator

./: .env.sample  .gitignore  CLAUDE.md  CLAUDE.md.backup  CLAUDE_CHEATSHEET.md  CLAUDE_QUICK_REF.md  CONTRIBUTING.md  DEVELOPMENT_LOG.md  LICENSE  Procfile  README.md  SECURITY.md  TESTING.md  WORKLOG.md  WORKLOG_FIXES.md  analyze_norman.py  apply_railway_migration.py  clear_dogs.py  clear_railway.py  config.py  demo_batch_performance.py  healthcheck.py  main.py  migration_progress.json  nixpacks.toml  page_text.txt  pyproject.toml  pytest.ini  railway.json  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  requirements_scrapegraph.txt  run_api.py  start.sh  test_cloudinary.py  test_image_fix.py  test_llm_direct.py  test_llm_integration.py  (+5 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.next/: trace
analysis/: BREED_STANDARDIZATION_FINAL_SUMMARY.md  animalrescuebosnia_dom_analysis.md  dogstrust_dom_analysis.md  santerpawsbulgarianrescue_dom_analysis.md  theunderdog_dom_analysis.md
api/: async_dependencies.py  auth.py  dependencies.py  exceptions.py  main.py
configs/: README.md  llm_organizations.yaml
database/: README.md  check_db_status.py  db_admin_runbook.md  db_migration_phase2.py  db_setup.py  db_update.py  final_schema.sql  migration_history.md  schema.sql
docs/: CI_CD_TIERED_STRATEGY_IMPLEMENTATION.md  README.md  SENTRY_SETUP.md  api_reference.md  batch_upload_improvements.md  bugfix-inconsistent-dog-counts.md  claude_agent_guidelines.md  configuration_system.md  cta_optimization_guide.md  data_standardization.md  development_workflow.md  frontend-dead-code-analysis.md  frontend_architecture.md  ig_photo_analysis_test_results.md  ig_photo_analysis_v2_test_results.md  installation_guide.md  llm-feature-documentation.md  navigation_troubleshooting_guide.md  performance_optimization_guide.md  production_deployment.md  project_overview.md  pytest_marker_audit_report.md  quick-start.md  r2_upload_improvements.md  railway-deployment-guide.md  refactoring-analysis.md  related_dogs_feature.md  scrapegraph_api_implementation.md  scraper_design.md  scraper_updates_needed.md  test_optimization_guide.md  troubleshooting.md  troubleshooting_guide.md  unified_standardization_api.md  unused-code-analysis-report_backend.md  weekly_scraping_guide.md
exploration/: explore_pets_in_turkey.py  fixed_paerser_test.py  test_scraper_example.py
exploration_backup/: focused_dog_scraper.py  test_text_based_scraper.py
frontend/: .env.example  .gitignore  ANIMATION_ANALYSIS_REPORT.md  CLAUDE.md  CODE_ORGANIZATION.md  DEAD_CODE_ANALYSIS_REPORT.md  DIAGNOSTIC_REPORT.md  IMAGE_MIGRATION_SUMMARY.md  README.md  SENTRY_DEPLOYMENT.md  TESTING.md  analyzer-output.txt  build-output.txt  debug-images.html  eslint.config.mjs  jest.config.js  jest.setup.js  lighthouse-baseline.json  next.config.analyzer.js  next.config.js  package-lock.json  package.json  playwright.config.backup.ts  playwright.config.ci.ts  playwright.config.optimized.ts  playwright.config.ts  pnpm-lock.yaml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js  test-production.sh  test_env_vars.js  tsconfig.json  vercel.json
management/: backfill_standardization.py  batch_processor.py  check_adoptions.py  config_commands.py  create_photo_analysis_table.py  database_monitoring.py  drop_unused_indexes.py  emergency_operations.py  fix_org11_adoptions.py  fix_protocol_relative_urls.py  instagram_photo_analyzer.py  llm_commands.py  railway_commands.py  railway_schema_migration.py  railway_scraper_cron.py  repair_breed_slugs.py  repair_crossbreed_classifications.py  run_adoption_migration.py  update_status_consistency.py  verify_migration.py
migrations/: add_blur_data_url_column.sql  add_breed_standardization_columns.sql  add_swipe_indexes.sql  optimize_swipe_age_queries.sql
monitoring/: README.md  data_quality_monitor.py
notebooks/: exploration.ipynb
rescuedogs-mcp-server/: README.md  package.json
scrapers/: CLAUDE.md  README.md  base_scraper.py  browser_manager.py  constants.py  sentry_integration.py
scripts/: add_pytest_markers.py  benchmark_pytest_markers.py  fix_availability_confidence.py  fix_pytest_imports.py  format_code.sh  test_cache_headers.py  test_config_commands.sh  update_test_markers.py  validate_test_markers.py  verify_documentation.sh
services/: __init__.py  adoption_detection.py  animal_data_preparation.py  browser_service.py  config.py  connection_pool.py  database_service.py  image_processing.py  image_processing_service.py  llm_data_service.py  llm_profiler_service.py  metrics_collector.py  models.py  null_objects.py  playwright_browser_service.py  progress_tracker.py  railway_service_controller.py  revalidation_client.py  session_manager.py
tests/: __init__.py  conftest.py  database_fixtures.py  service_mocks.py  test_adoption_status_migration.py  test_age_breed_standardization_improvements.py  test_base_scraper_image_validation.py  test_config_safety.py  test_cors_sentry_headers.py  test_partial_failure_alerting.py  test_scraper_sentry_integration.py  test_sentry_endpoints.py  test_sentry_integration.py  test_size_standardization_fixes.py  test_skip_existing_animals_stale_bug.py
utils/: README_DUPLICATE_TOOLS.md  SECURE_MODULES_INTEGRATION.md  add_original_urls.sql  apply_standardization_to_db.py  backfill_slugs.py  breed_utils.py  check_slug_status.py  clear_animals.py  clear_dogs.py  cloudinary_service.py  cloudinary_utils.py  config_loader.py  config_models.py  config_scraper_runner.py  data_audit.py  db.py  db_connection.py  enhanced_breed_standardization.py  feature_flags.py  fix_missing_id_slugs.py  fix_pit_duplicates.py  migrate_existing_images.py  optimized_standardization.py  org_sync.py  organization_sync_service.py  r2_logo_uploader.py  r2_service.py  r2_utils.py  secure_config_scraper_runner.py  secure_file_handler.py  secure_scraper_loader.py  shared_extraction_patterns.py  slug_generator.py  standardization.py  test_config_models.py  unified_standardization.py  view_sample_dogs.py
(+1760 files in other folders)
