[project]
name = "rescue-dog-aggregator"
version = "1.0.0"
description = "Open-source platform aggregating rescue dogs from multiple organizations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "uvicorn[standard]>=0.49.0",
    "psycopg2-binary>=2.9.12",
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.51,<3.0.0",
    "alembic>=1.18.5,<2.0.0",
    "starlette>=1.3.1",
    "urllib3>=2.7.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "jsonschema>=4.26.0",
    "sentry-sdk[fastapi,sqlalchemy]>=2.64.0",
    "werkzeug>=3.1.8",
    "mcp>=1.28.1",
    "requests>=2.34.2",
    "beautifulsoup4>=4.15.0",
    "selenium>=4.45.0",
    "webdriver-manager>=4.1.2",
    "playwright>=1.60.0",
    "nest-asyncio>=1.6.0",
    "pillow>=12.2.0",
    "click>=8.4.2",
    "colorama>=0.4.6",
    "rich>=15.0.0",
    "langdetect==1.0.9",
    "python-dotenv>=1.2.2",
    "boto3>=1.43.36",
    "python-dateutil>=2.9.0.post0",
    "tenacity>=9.1.4",
    "iniconfig>=2.3.0",
    "cachetools>=7.1.4",
    "pytest-benchmark>=5.2.3",
    "firecrawl-py>=4.30.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.20",
    "mypy>=2.1.0",
    "types-requests>=2.33.0.20260518",
    "ipython>=9.15.0",
    "watchdog>=6.0.0",
    "cryptography>=49.0.0",
    "pip-audit>=2.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "scrapers", "services", "utils", "database"]

[tool.uv]
constraint-dependencies = [
    "PyJWT>=2.12.0",
    "Pygments>=2.20.0",
]
dev-dependencies = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.20",
    "mypy>=2.1.0",
    "types-requests>=2.33.0.20260518",
    "ipython>=9.15.0",
    "watchdog>=6.0.0",
    "cryptography>=49.0.0",
    "pip-audit>=2.10.1",
]

[tool.ruff]
line-length = 200
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "venv",
    ".env",
    "env",
    "build",
    "dist",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".coverage",
    "htmlcov",
    "node_modules",
    "frontend",
    "migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["api", "scrapers", "services", "utils", "database", "tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
